<resources>
    <string name="app_name">MAD</string>
    <string name="home">Home</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="add">Add</string>
    <string name="update_profile">Update Profile</string>
    <string name="profileManagment">Profile Managment</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="editprofile">Edit Profile</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="userlist">User List</string>
    <string name="listview">List View</string>
</resources>