<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserList">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userlist"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lvListviewUL"
        android:layout_width="match_parent"
        android:layout_height="588dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etUsernameUL"
            android:layout_width="211dp"
            android:layout_height="58dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSearchUL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            app:layout_constraintBottom_toBottomOf="@+id/etUsernameUL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etUsernameUL"
            app:layout_constraintTop_toTopOf="@+id/etUsernameUL" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>